# OpenMP_Intro

./: README.md
10task/: README.MD  compile_and_run.sh  main.cpp  matrix.h  plot.py  solvers.cpp  solvers.h  vector.h
1task/: CMakeLists.txt  Readme.txt  task1_add  task1_add.cpp  task1_main  task1_main.cpp
1task/CMake/: CMakeCache.txt  Makefile  cmake_install.cmake  task_1
2task/: CMakeLists.txt  Readme.txt  task2_add.cpp  task2_main.cpp
3task/: CMakeLists.txt  Readme.txt  task3_add.cpp
4task/: CMakeLists.txt  Readme.txt  task4_add.cpp
5task/: CMakeLists.txt  Readme.txt  task5_add.cpp
6task/: CMakeLists.txt  Readme.txt  task6_add.cpp
8task/: CMakeLists.txt  README.md  task8_add.cpp
bugged/: README.md  bugged1.c  bugged1.txt  bugged2.c  bugged2.txt  bugged3.c  bugged3.txt  bugged4.c  bugged4.txt  bugged5.c  bugged5.txt  bugged6.c  bugged6.txt
etalon/: etalon_mpi.cpp  etalon_omp.cpp  mpi_graph.py  omp_graph.py
lab/: 2v.cpp  README.md  explanation.txt  mpi_graph.py  run.sh
lab_add/: main_mpi.cpp  main_omp.cpp  mpi.cpp  omp.cpp  omp_graph.py
